<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@color/colorBackground"
    android:id="@+id/activity_specialization_option_select"
    android:orientation="vertical"
    tools:context="com.example.vivekgopal.project1.activities.GenericSpecializationOptionActivity">

    <include layout="@layout/layout_generic_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <Button
                android:id="@+id/activity_specialization_option_select_round_button"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:textAllCaps="false"
                android:textSize="25dp"
                android:gravity="center"
                android:background="@drawable/round_button"
                android:elevation="40sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/activity_specialization_option_select_left_arrow"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7.5dp"
                android:background="@drawable/ic_chevron_left"
                android:elevation="40dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    style="@style/specialization_button"
                    android:text="@string/skills"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="15dp"
                    android:id="@+id/button_specialization_option_select_skills"
                    />
                <Button
                    style="@style/specialization_button"
                    android:text="@string/companies"
                    android:padding="5dp"
                    android:textSize="15dp"
                    android:id="@+id/button_specialization_option_select_companies"
                    />
                <Button
                    style="@style/specialization_button"
                    android:text="@string/salaries"
                    android:padding="5dp"
                    android:textSize="15dp"
                    android:id="@+id/button_specialization_option_select_salaries"
                    />
                <Button
                    style="@style/specialization_button"
                    android:text="@string/certifications"
                    android:padding="5dp"
                    android:textSize="15dp"
                    android:id="@+id/button_specialization_option_select_certifications"
                    />
                <Button
                    style="@style/specialization_button"
                    android:text="@string/career_tips"
                    android:padding="5dp"
                    android:textSize="15dp"
                    android:id="@+id/button_specialization_option_select_tips"
                    />
                <Button
                    style="@style/specialization_button"
                    android:text="@string/career_ladder"
                    android:padding="5dp"
                    android:textSize="15dp"
                    android:id="@+id/button_specialization_option_select_ladder"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
